tests/ui/self/arbitrary-self-from-method-substs-ice.stderr
error[E0658]: cannot call conditionally-const method `<R as Deref>::deref` in constant functions
  --> $DIR/arbitrary-self-from-method-substs-ice.rs:13:9
   |
LL |         self.0
   |         ^^^^^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0493]: destructor of `R` cannot be evaluated at compile-time
  --> $DIR/arbitrary-self-from-method-substs-ice.rs:10:43
   |
LL |     const fn get<R: Deref<Target = Self>>(self: R) -> u32 {
   |                                           ^^^^ the destructor for this type cannot be evaluated in constant functions
...
LL |     }
   |     - value is dropped here

note: erroneous constant encountered
  --> $DIR/arbitrary-self-from-method-substs-ice.rs:24:5
   |
LL |     FOO;
   |     ^^^

error[E0801]: invalid generic `self` parameter type: `R`
  --> $DIR/arbitrary-self-from-method-substs-ice.rs:10:49
   |
LL |     const fn get<R: Deref<Target = Self>>(self: R) -> u32 {
   |                                                 ^
   |
   = note: type of `self` must not be a method generic parameter type
   = help: use a concrete type such as `self`, `&self`, `&mut self`, `self: Box<Self>`, `self: Rc<Self>`, `self: Arc<Self>`, or `self: Pin<P>` (where P is one of the previous types except `Self`)

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0493, E0658, E0801.
For more information about an error, try `rustc --explain E0493`.
